# ScreenWriting

./: CMakeLists.txt  README.md  main.cpp
Domain/: Idea.cpp  Idea.h  ScreenWriter.cpp  ScreenWriter.h
GUI/: DevelopWindow.cpp  DevelopWindow.h  ScreenWriterWindow.cpp  ScreenWriterWindow.h
Observer/: Observer.h
Repository/: IdeasRepo.cpp  IdeasRepo.h  ScreenWritersRepo.cpp  ScreenWritersRepo.h
TableModel/: TableModel.cpp  TableModel.h
